--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,13 @@
 {
-  "presets": ["react", "env"],
+  "presets": [
+    "react", "env", "stage-0",
+    ["es2015", { "loose":true }],
+  ],
   "plugins": [
     "transform-class-properties",
     "transform-object-rest-spread",
-    [ "transform-es2015-classes", { "loose": true } ]
+    ["transform-decorators-legacy"],
+    [ "transform-es2015-classes", { "loose": true } ],
+    ["transform-async-to-generator"],
   ]
 }
